This commit will
start lazy loading pages

--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -15,11 +15,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-erg-detail-loading.html">
-<link rel="import" href="crew-team-manager-erg-detail-results.html">
-<link rel="import" href="crew-team-manager-erg-detail-message.html">
 
 
 <dom-module id="crew-team-manager-erg-detail">
+    <link rel="lazy-import" group="results" href="crew-team-manager-erg-detail-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-erg-detail-message.html">
     <template>
         <style>
              :host {
@@ -88,7 +88,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerErgDetail extends Polymer.Element {
+        class crewTeamManagerErgDetail extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-erg-detail'
@@ -134,7 +134,11 @@
 
                 }
 
-                this._page = page;
+                this.importLazyGroup(page).then(function (results) {
+                    this._page = page;
+                    this._toggleDrawer();
+                    this.dispatchEvent(new CustomEvent('import-loaded', results));
+                }.bind(this));
             }
 
 
