--- a/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
@@ -16,11 +16,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-erg-list-loading.html">
-<link rel="import" href="crew-team-manager-erg-list-results.html">
-<link rel="import" href="crew-team-manager-erg-list-message.html">
 
 
 <dom-module id="crew-team-manager-erg-list">
+    <link rel="lazy-import" group="results" href="crew-team-manager-erg-list-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-erg-list-message.html">
     <template>
         <style>
              :host {
@@ -95,7 +95,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerErgList extends Polymer.Element {
+        class crewTeamManagerErgList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-erg-list'
@@ -154,8 +154,11 @@
                         page = 'results';
                     }
                 }
-
-                this._page = page;
+                this.importLazyGroup(page).then(function (results) {
+                    this._page = page;
+                    this._toggleDrawer();
+                    this.dispatchEvent(new CustomEvent('import-loaded', results));
+                }.bind(this));
 
             }
 
