--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
@@ -16,11 +16,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-finance-list-loading.html">
-<link rel="import" href="crew-team-manager-finance-list-results.html">
-<link rel="import" href="crew-team-manager-finance-list-message.html">
 
 
 <dom-module id="crew-team-manager-finance-list">
+    <link rel="lazy-import" group="results" href="crew-team-manager-finance-list-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-finance-list-message.html">
     <template>
         <style>
              :host {
@@ -94,7 +94,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerFinanceList extends Polymer.Element {
+        class crewTeamManagerFinanceList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-finance-list'
@@ -153,7 +153,11 @@
                     }
                 }
 
-                this._page = page;
+                this.importLazyGroup(page).then(function (results) {
+                    this._page = page;
+                    this._toggleDrawer();
+                    this.dispatchEvent(new CustomEvent('import-loaded', results));
+                }.bind(this));
 
             }
 
